--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/ariabuckles/shaky/issues"
   },
   "homepage": "https://github.com/ariabuckles/shaky#readme",
-  "dependencies": {
+  "devDependencies": {
     "coffee-script": "^1.10.0"
   }
 }
